# 4thewords_backend_andres_torres

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
sql/: seed.sql  table.sql
src/: main.py
src/app/legends/: dependencies.py  models.py  repository.py  routes.py  schemas.py  services.py
src/core/db/: db.py
src/core/db/migrations/: env.py
src/core/db/migrations/versions/: 18e8f88c3f29_add_provicia_distrito_canton_models.py  209d7cc80666_initial_migration.py  2ea20e238fdd_add_image_field_on_legend.py  fdf3c0c9c468_add_legend_model.py
src/core/settings/: config.py
