[tool.poetry]
name = "Virtual Books API"
version = "0.1.0"
description = "API to manage virtual books"
authors = ["Andrés Torres <camitorres1404@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.11"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pydantic-settings = "^2.8.1"
sqlalchemy = "^2.0.38"
alembic = "^1.14.1"
mysqlclient = "^2.2.7"
python-multipart = "^0.0.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
